--- a/TestForMac/TestForMac/Views/Category/Index.cshtml
+++ b/TestForMac/TestForMac/Views/Category/Index.cshtml
@@ -3,47 +3,61 @@
 @{
     ViewData["Title"] = "Index";
 }
-<!--p stand for padding-->
-<div class="container p-3">
-    <!--pt stand for padding top-->
-    <div class="row pt-4">
-        <!--bootstrap has 12 columns in one row in default-->
-        <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
-        </div>
-        <!--text-end-->
-        <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
-            </a>
-        </div>
-    </div>
 
-    <br />
 
-    <table class="table table-bordered table-striped" style="width:100%">
-        <thead>
-            <tr>
-                <th>
-                    Category Name
-                </th>
-                <th>
-                    Display Order
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var obj in Model)
-            {
+<form method="post">
+    <!--p stand for padding-->
+    <div class="container p-3">
+        <!--pt stand for padding top-->
+        <div class="row pt-4">
+            <!--bootstrap has 12 columns in one row in default-->
+            <div class="col-6">
+                <h2 class="text-primary">Category List</h2>
+            </div>
+            <!--text-end-->
+            <div class="col-6 text-end">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
+                </a>
+            </div>
+        </div>
+
+        <br />
+
+        <table class="table table-bordered table-striped" style="width:100%">
+            <thead>
                 <tr>
-                    <td width="50%">
-                        @obj.Name
-                    </td>
-                    <td width="50%">
-                        @obj.DisplayOrder
-                    </td>
+                    <th>
+                        Category Name
+                    </th>
+                    <th>
+                        Display Order
+                    </th>
+                    <th>
+                        Edit
+                    </th>
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model)
+                {
+                    <tr>
+                        <td width="30%">
+                            @obj.Name
+                        </td>
+                        <td width="30%">
+                            @obj.DisplayOrder
+                        </td>
+                        <td>
+                            @*<input asp-for="@obj.Id" hidden/>*@
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
+                                <button type="submit" asp-route-id="@obj.Id" class="btn btn-secondary mx-2"><i class="bi bi-file-x-fill"></i>Delete</button>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</form>
