--- a/TestForMac/TestForMac/Views/Shared/_Layout.cshtml
+++ b/TestForMac/TestForMac/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/css/bootswatchTheme.css" />
     <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!--<link rel="stylesheet" href="~/TestForMac.styles.css" asp-append-version="true" />-->
 </head>
@@ -66,6 +67,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notification" />
             @RenderBody()
         </main>
     </div>
